the cursor should move at positions where the  cellmap has holes, bug 193405 r=jkeiser sr/a=dbaron